Fix [chat message wrapping] components/ui/Chat

--- a/src/components/ui/Chat/chat.module.css
+++ b/src/components/ui/Chat/chat.module.css
@@ -50,7 +50,7 @@
 .content {
   font-size: var(--font-size-s);
   align-self: flex-start;
-  word-break: break-all;
+  overflow-wrap: anywhere;
   white-space: pre-line;
 }
 
